Fix [Bug #19467]: correct cache points and counting failure on `ANYCHAR_STAR_PEEK_NEXT`